k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: campin-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /search-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: search-service-service
                port:
                  number: 80
          - path: /manager-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: manager-service-service
                port:
                  number: 80
          - path: /booking-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: booking-service-service
                port:
                  number: 80
